tests/NormalTests/paczka1/fuzzy1/26289598.err
Error in line 1: G7K A825 21,7
Error in line 2: G7K A533 56,2
Error in line 4: G7K A825 9,2
Error in line 8: A802 A533 28,3
Error in line 12: A802 A825 16,3
Error in line 16: hPNX6PH A454 77,1
Error in line 20: 2QzBstKqAQ A802 15,5
Error in line 25: hPNX6PH A533 62,2
